fixed contact form

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <meta property="og:site_name" content="Matildad DE SOUZA" />
 
     <link rel="stylesheet" href="../scss/style.css">
+    
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/web-design.png">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -890,7 +891,7 @@
                     required
                   ></textarea>
                 </div>
-                <button type="submit" value="submit" class="btn btn-primary">
+                <button type="submit" value="submit" class="btn">
                   Submit
                 </button>
               </form>
