--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
         content="A multipotencialite, now coming back as a Front-end web developer equiped with Javascript">
     <meta property="og:site_name" content="Matildad DE SOUZA" />
 
-    <link rel="stylesheet" href="../scss/style.css">
-    
+    <link rel="stylesheet" href="../public/style.css">
+
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/web-design.png">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
