--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
 
         <!-- profile photo section -->
         <div class="profile">
-            <img src="assets/profile.jpg" alt="Profile picture">
+            <img src="/public/profile.jpg" alt="Profile picture">
         </div>
         <!-- end profile photo -->
 
