--- a/public/index.html
+++ b/public/index.html
@@ -137,7 +137,7 @@
             <div id="project0" class="project-container">
                 <a href="https://matildadds.github.io/MONSTERA_Cie/" target="_blank">
                     <div class="project-img"
-                        style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('../assets/FMonstera&Cie.png')">
+                        style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('/public/assets/FMonstera&Cie.png')">
                     </div>
                     <div id="project0-info">
                         <p><a href="https://matildadds.github.io/MONSTERA_Cie/">MONSTERA & Cie</a>. The Supplier of vegetable and exotic curiosities. <br>
@@ -180,7 +180,7 @@
             <div id="project1" class="project-container">
                 <a href="https://github.com/MatildadDS/loopstudios-landing-page" target="_blank">
                     <div class="project-img"
-                        style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('../assets/FLoopstudios.png')">
+                        style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('/public/assets/FLoopstudios.png')">
                     </div>
                     <div id="project1-info">
                         <p><a href="https://github.com/MatildadDS/loopstudios-landing-page">LOOPSTUDIOS</a> - An Immersive Experience That Deliver. Improve your front-end skills by building real projects with FRONTEND MENTOR.io. </p>
@@ -219,7 +219,7 @@
             <div id="project2" class="project-container">
                 <a href="" target="_blank">
                     <div class="project-img"
-                        style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('../assets/FToDoList.png')">
+                        style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('/public/assets/FToDoList.png')">
                     </div>
                     <div id="project2-info">
                         <p>FREE UP YOUR MENTAL SPACE !
@@ -270,7 +270,7 @@
             <div id="project3" class="project-container">
                 <a href="https://github.com/MatildadDS/todolist" target="_blank">
                     <div class="project-img"
-                        style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('../assets/TodoListReact.png')">
+                        style="background-image: linear-gradient(rgba(246, 219, 188, 0.1),rgba(246, 219, 188, 0.1)), url('/public/assets/TodoListReact.png')">
                     </div>
                     <div id="project3-info">
                         <p><a href="https://github.com/MatildadDS/todolist">FREE UP YOUR MENTAL SPACE, BIS</a> !</p>
@@ -631,7 +631,7 @@
 
                 <div class="company-exp" title="Click for details">
                     <div class="box b1" data-anim="1">
-                        <img class="exp" src="../assets/AmnestyI.png" alt="">
+                        <img class="exp" src="/public/assets/AmnestyI.png" alt="">
                         <div class="btn">Content Integrator</div>
                     </div>
                 </div>
@@ -640,7 +640,7 @@
 
                 <div class="company-exp" title="Click for details">
                     <div class="box b2" data-anim="2">
-                        <img class="exp" src="../assets/Coal.png" alt="">
+                        <img class="exp" src="/public/assets/Coal.png" alt="">
                         <p class="btn">Co-founder <br> Head of Outreach <br> Spoker Person</p>
                     </div>
                 </div>
@@ -649,7 +649,7 @@
 
                 <div class="company-exp" title="Click for details">
                     <div class="box b3" data-anim="3">
-                        <img class="exp" src="../assets/Tattoo-is-an-art.png" alt="">
+                        <img class="exp" src="/public/assets/Tattoo-is-an-art.png" alt="">
                         <a href="#" class="btn">Tattoo Artist Manager</a>
                     </div>
                 </div>
@@ -658,7 +658,7 @@
 
                 <div class="company-exp" title="Click for details">
                     <div class="box b4" data-anim="4">
-                        <img class="exp" src="../assets/Barreau-de-Paris.png" alt="">
+                        <img class="exp" src="/public/assets/Barreau-de-Paris.png" alt="">
                         <a href="#" class="btn">Executive Assistant</a>
                     </div>
                 </div>
@@ -678,7 +678,7 @@
                         <div class="exp-modal-body">
                             <h6 class="period">Paris, France: Oct 2020</h6>
                             <div class="exp-details">
-                                <a href="https://www.amnesty.fr/"><img src="../assets/AmnestyI.png" loading="lazy"
+                                <a href="https://www.amnesty.fr/"><img src="/public/assets/AmnestyI.png" loading="lazy"
                                         alt="Amnesty International"></a>
                                 <p> 'We campaign for a world where everyone's human
                                     rights are respected.' <br>
@@ -717,7 +717,7 @@
                         <div class="exp-modal-body">
                             <h6 class="period">Paris, France / New-York, USA: 2018 - 2020</h6>
                             <div class="exp-details">
-                                <a href="https://wearecoal.com/"><img src="../assets/Coal.png" alt="Coal"></a>
+                                <a href="https://wearecoal.com/"><img src="/public/assets/Coal.png" alt="Coal"></a>
                                 <p>'A new home for tattooing.'<br>
                                     <strong><a href="https://wearecoal.com/">Coal</a></strong>is where tattooers and
                                     their
@@ -756,7 +756,7 @@
                             <h6 class="period">Paris, France / Belgium, Bruxelles: 2014 - 2018</h6>
 
                             <div class="exp-details">
-                                <a href="#"> <img src="../assets/Tattoo-is-an-art.png" alt="Tattoo manager"></a>
+                                <a href="#"> <img src="/public/assets/Tattoo-is-an-art.png" alt="Tattoo manager"></a>
                                 <p>Passionate about tattooing, which I see as the 10th art, I made a leap in the
                                     unknown
                                     by performing I
@@ -805,7 +805,7 @@
                             <h6 class="period">Paris, France: 2008 - 2010</h6>
 
                             <div class="exp-details">
-                                <a href="http://www.avocatparis.org/"><img src="../assets/Barreau-de-Paris.png"
+                                <a href="http://www.avocatparis.org/"><img src="/public/assets/Barreau-de-Paris.png"
                                         alt="Barreau de Paris"> </a>
                                 <p> <a href="http://www.avocatparis.org/">The Paris Bar,</a>through its Association, represents the
                                     legal profession in Paris to defend the collective interest of lawyers and
