--- a/public/index.html
+++ b/public/index.html
@@ -934,7 +934,7 @@
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
-        <script src="./app.js"></script>
+        <script src="/public/app.js"></script>
     </div>
 </body>
 
