--- a/public/index.html
+++ b/public/index.html
@@ -836,66 +836,39 @@
         <div class="contacts" id="contacts">
             <h2>Contacts</h2>
 
-            <p>
-                Any comments or feedback? Let me know! Thank you.
-              </p>
-              <hr />
               <form
                 id="contact-form"
                 method="POST"
                 action="send"
-                enctype="multipart/form-data"
-              >
-                <div class="form-group">
-                  <div class="row">
-                    <div class="col-md-6">
-                      <input
-                        placeholder="Name"
-                        id="name"
-                        name="name"
-                        type="text"
-                        class="form-control"
-                        required
-                      />
-                    </div>
-                    <div class="col-md-6">
-                      <input
-                        placeholder="Email"
-                        id="email"
-                        type="email"
-                        name="email"
-                        class="form-control"
-                        aria-describedby="emailHelp"
-                        required
-                      />
-                    </div>
-                  </div>
+                enctype="multipart/form-data">
+               
+                <div class="form-groupe">
+                    <label for="prenom">Prénom</label>
+                    <input type="text" required maxlength="16" id="prenom">
                 </div>
-                <div class="form-group">
-                  <input
-                    placeholder="Subject"
-                    id="subject"
-                    name="subject"
-                    type="text"
-                    class="form-control"
-                    required
-                  />
+                <div class="form-groupe">
+                    <label for="nom">Nom</label>
+                    <input type="text" required maxlength="16" id="nom">
                 </div>
-                <div class="form-group">
-                  <textarea
-                    placeholder="Message"
-                    id="message"
-                    name="message"
-                    class="form-control"
-                    rows="3"
-                    required
-                  ></textarea>
+                <div class="form-groupe">
+                    <label for="email">Email</label>
+                    <input type="email" required maxlength="50" id="email">
                 </div>
-                <button type="submit" value="submit" class="btn">
+                <div class="form-groupe">
+                    <textarea id="txt" placeholder="Votre message" required></textarea>
+                </div>
+                <div class="form-groupe">
+
+                    <button type="submit" value="submit" class="button-sub">
                   Submit
-                </button>
+                    </button>
+                </div>
               </form>
             </div>
+        </div>
+    </div>
+
+
         
         <!-- end of contacts -->
 
