adding some style

--- a/public/index.html
+++ b/public/index.html
@@ -843,19 +843,23 @@
                 enctype="multipart/form-data">
                
                 <div class="form-groupe">
-                    <label for="prenom">Prénom</label>
-                    <input type="text" required maxlength="16" id="prenom">
+                    <label for="prenom">Firstname</label>
+                    <input type="text" required maxlength="16" id="firstname">
                 </div>
                 <div class="form-groupe">
-                    <label for="nom">Nom</label>
-                    <input type="text" required maxlength="16" id="nom">
+                    <label for="nom">Lastname</label>
+                    <input type="text" required maxlength="16" id="lastname">
                 </div>
                 <div class="form-groupe">
                     <label for="email">Email</label>
                     <input type="email" required maxlength="50" id="email">
                 </div>
                 <div class="form-groupe">
-                    <textarea id="txt" placeholder="Votre message" required></textarea>
+                    <label for="object">Object</label>
+                    <input type="text" required maxlength="50" id="object">
+                </div>
+                <div class="form-groupe">
+                    <textarea id="txt" placeholder="Your message" required></textarea>
                 </div>
                 <div class="form-groupe">
 
