--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Matildad DE SOUZA : Front-end developer love Javascript">
     <meta property="og:image"
-        content="https://res.cloudinary.com/diczuc7me/image/upload/v1602189747/yizhu_web_du71zb.png">
+        content="/public/assets/profile.jpg">
     <meta property="og:description"
         content="A multipotencialite, now coming back as a Front-end web developer equiped with Javascript">
     <meta property="og:site_name" content="Matildad DE SOUZA" />
 
     <link rel="stylesheet" href="../public/style.css">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="../assets/web-design.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/public/assets/web-design.png">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
