--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Matildad DE SOUZA : Front-end developer love Javascript">
+    <meta property="og:title" content="Matildad DE SOUZA : Front-end developer who loves Javascript">
     <meta property="og:image"
         content="/public/assets/profile.jpg">
     <meta property="og:description"
